crates/runtime/benches/snapshots/bench__s3_arrow_memory_tpch_q14_explain.snap
---
source: crates/runtime/benches/bench.rs
description: "Query: select\n            100.00 * sum(case\n                             when p_type like 'PROMO%'\n                                 then l_extendedprice * (1 - l_discount)\n                             else 0\n            end) / sum(l_extendedprice * (1 - l_discount)) as promo_revenue\nfrom\n    lineitem,\n    part\nwhere\n        l_partkey = p_partkey\n  and l_shipdate >= date '1995-09-01'\n  and l_shipdate < date '1995-10-01';"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                 |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: Float64(100) * CAST(sum(CASE WHEN part.p_type LIKE Utf8("PROMO%") THEN lineitem.l_extendedprice * Int64(1) - lineitem.l_discount ELSE Int64(0) END) AS Float64) / CAST(sum(lineitem.l_extendedprice * Int64(1) - lineitem.l_discount) AS Float64) AS promo_revenue                                                                                       |
|               |   Aggregate: groupBy=[[]], aggr=[[sum(CASE WHEN part.p_type LIKE Utf8("PROMO%") THEN __common_expr_1 ELSE Decimal128(Some(0),38,4) END) AS sum(CASE WHEN part.p_type LIKE Utf8("PROMO%") THEN lineitem.l_extendedprice * Int64(1) - lineitem.l_discount ELSE Int64(0) END), sum(__common_expr_1) AS sum(lineitem.l_extendedprice * Int64(1) - lineitem.l_discount)]] |
|               |     Projection: lineitem.l_extendedprice * (Decimal128(Some(1),20,0) - lineitem.l_discount) AS __common_expr_1, part.p_type                                                                                                                                                                                                                                          |
|               |       Inner Join: lineitem.l_partkey = part.p_partkey                                                                                                                                                                                                                                                                                                                |
|               |         Projection: lineitem.l_partkey, lineitem.l_extendedprice, lineitem.l_discount                                                                                                                                                                                                                                                                                |
|               |           BytesProcessedNode                                                                                                                                                                                                                                                                                                                                         |
|               |             Filter: lineitem.l_shipdate >= Date32("1995-09-01") AND lineitem.l_shipdate < Date32("1995-10-01")                                                                                                                                                                                                                                                       |
|               |               TableScan: lineitem projection=[l_partkey, l_extendedprice, l_discount, l_shipdate], partial_filters=[lineitem.l_shipdate >= Date32("1995-09-01"), lineitem.l_shipdate < Date32("1995-10-01")]                                                                                                                                                         |
|               |         BytesProcessedNode                                                                                                                                                                                                                                                                                                                                           |
|               |           TableScan: part projection=[p_partkey, p_type]                                                                                                                                                                                                                                                                                                             |
| physical_plan | ProjectionExec: expr=[100 * CAST(sum(CASE WHEN part.p_type LIKE Utf8("PROMO%") THEN lineitem.l_extendedprice * Int64(1) - lineitem.l_discount ELSE Int64(0) END)@0 AS Float64) / CAST(sum(lineitem.l_extendedprice * Int64(1) - lineitem.l_discount)@1 AS Float64) as promo_revenue]                                                                                 |
|               |   AggregateExec: mode=Final, gby=[], aggr=[sum(CASE WHEN part.p_type LIKE Utf8("PROMO%") THEN lineitem.l_extendedprice * Int64(1) - lineitem.l_discount ELSE Int64(0) END), sum(lineitem.l_extendedprice * Int64(1) - lineitem.l_discount)]                                                                                                                          |
|               |     CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                           |
|               |       AggregateExec: mode=Partial, gby=[], aggr=[sum(CASE WHEN part.p_type LIKE Utf8("PROMO%") THEN lineitem.l_extendedprice * Int64(1) - lineitem.l_discount ELSE Int64(0) END), sum(lineitem.l_extendedprice * Int64(1) - lineitem.l_discount)]                                                                                                                    |
|               |         ProjectionExec: expr=[l_extendedprice@0 * (Some(1),20,0 - l_discount@1) as __common_expr_1, p_type@2 as p_type]                                                                                                                                                                                                                                              |
|               |           CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                |
|               |             HashJoinExec: mode=Partitioned, join_type=Inner, on=[(l_partkey@0, p_partkey@0)], projection=[l_extendedprice@1, l_discount@2, p_type@4]                                                                                                                                                                                                                 |
|               |               CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                            |
|               |                 RepartitionExec: partitioning=Hash([l_partkey@0], 4), input_partitions=4                                                                                                                                                                                                                                                                             |
|               |                   ProjectionExec: expr=[l_partkey@0 as l_partkey, l_extendedprice@1 as l_extendedprice, l_discount@2 as l_discount]                                                                                                                                                                                                                                  |
|               |                     BytesProcessedExec                                                                                                                                                                                                                                                                                                                               |
|               |                       CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                    |
|               |                         FilterExec: l_shipdate@3 >= 1995-09-01 AND l_shipdate@3 < 1995-10-01                                                                                                                                                                                                                                                                         |
|               |                           SchemaCastScanExec                                                                                                                                                                                                                                                                                                                         |
|               |                             RepartitionExec: partitioning=RoundRobinBatch(4), input_partitions=1                                                                                                                                                                                                                                                                     |
|               |                               MemoryExec: partitions=1, partition_sizes=[733]                                                                                                                                                                                                                                                                                        |
|               |               CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                            |
|               |                 RepartitionExec: partitioning=Hash([p_partkey@0], 4), input_partitions=4                                                                                                                                                                                                                                                                             |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                                                                                                 |
|               |                     SchemaCastScanExec                                                                                                                                                                                                                                                                                                                               |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(4), input_partitions=1                                                                                                                                                                                                                                                                           |
|               |                         MemoryExec: partitions=1, partition_sizes=[25]                                                                                                                                                                                                                                                                                               |
|               |                                                                                                                                                                                                                                                                                                                                                                      |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
